--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   header { padding:2rem; background:#ffccd5; color:#660033; font-size:2rem; font-weight:bold; box-shadow:0 4px 6px rgba(0,0,0,0.1); animation:fadeInDown 1.5s ease; }
   section { padding:2rem; }
 
-  .carousel-container { position:relative; max-width:400px; margin:0 auto; overflow:hidden; border-radius:1rem; box-shadow:0 4px 6px rgba(0,0,0,0.2); }
+  .carousel-container {position: relative;width: 100%;max-width: 900px; /* aumenta no desktop */margin: 0 auto;overflow: hidden;border-radius: 1rem;box-shadow: 0 4px 6px rgba(0,0,0,0.2);}
   .carousel { display:flex; transition:transform 0.6s ease-in-out; touch-action: pan-y; }
   .carousel-item { position:relative; min-width:100%; }
-  .carousel-item img, .carousel-item video { width:100%; height:auto; max-height:80vh; object-fit:cover; }
+  .carousel-item img,
+  .carousel-item video {width: 100%;height: auto;max-height: 90vh; /* usa quase a tela inteira */object-fit: contain; /* mostra imagem/vídeo inteiro sem cortar */border-radius: 1rem;}
   .caption { position:absolute; bottom:10px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.5); color:white; padding:0.5rem 1rem; border-radius:1rem; font-size:1rem; font-weight:bold; }
 
   .carousel-buttons { position:absolute; top:50%; width:100%; display:flex; justify-content:space-between; transform:translateY(-50%); }
@@ -71,6 +72,9 @@
     <p>
       Hoje completamos 1 mês juntos, e eu só consigo agradecer por cada instante que vivi ao seu lado. Você é a melhor parte dos meus dias e sou muito feliz por ter você comigo. Agradeço a jeová todos dias por isso. Quero continuar vivendo momentos únicos contigo, assim como já vivemos neste primeiro mês. Quando me vejo no teu olhar me sinto amado, admirado e seguro. E nunca quero perder isso. Lembra-te da citação de O Pequeno Príncipe que te dei junto o buquê de rosas? Se não me engano, um pouco antes naquele diálogo, a raposa disse algo ao príncipe que acho que cai muito bem na gente. Ela disse algo assim: "Eu não sou pra você nada além de uma raposa como a mil outras e tu não és para mim nada além de um garoto como a mil outros. Mas se tu me cativas eu me torno especial... eu serei única para ti no mundo e você será único para mim no mundo." Quando nos tornamos amigos de fato, me sentia contente de estar contigo. Esperava com desejo cada orquestra e, junto com ela, uma mensagem perguntando "Bora?". De primeiro momento, não entendia muito bem aquele sentimento. Foi então que, ao passar dos meses, entendi que era paixão. E que ela crescia mais e mais ao passo que conversavamos mais. Mas eu tinha medo. Medo do que pensariam. Do que você pensava sobre o assunto. Tanto é que mandei uma vez falando que no pior dos mundos eu teria que esperar até abril do ano que vem (Que bom que não tive que esperar kkk). Foi então que, há 1 mês atrás, decidimos oficializar esse compromisso um com o outro e sou grato a ti por confiar em mim dessa forma e (tentar rs) te fazer feliz. No diálogo do Pequeno Príncipe, a raposa disse aquilo porquê o Príncipe tinha uma rosa em seu mundo, que ele achava que era única. Mas então ele viu uma barreira de rosas e ficou chateado achando que a rosa havia o enganado. Mas não era isso, e a raposa o ajudou a enxergar. Ela era única pra ele, pois os dois criaram sentimentos um pelo outro, algo que ele não tem com nenhuma outra rosa. Assim como o Príncipe tinha a sua rosa, eu tenho você. Realmente, o Rei Lemuel tinha razão quando escreveu: "Há muitas esposas capazes, Mas você supera todas elas." Você é especial. Única. E cuidarei de ti com tudo de mim. Que este seja apenas o primeiro de muitos outros meses que ainda virão. 
 Eu te amo! ❤️
+    </p>
+    <p>
+      Eu te amo! ❤️
     </p>
   </div>
 </section>
